2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: removed
	  debug message.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/TextEditorCommands.cs:
	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Added show code template command.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs:
	* MonoDevelop.Ide.CodeTemplates/EditTemplateDialog.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateVariable.cs:
	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateListDataProvider.cs:
	  Added icons to the template completion list.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs:
	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Worked on templates.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs: Handled
	  single file case.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: Fixed
	  resolve position for GetCountOrLength

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: Worked on
	  template callbacks.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: Worked on
	  multi item callback.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs: Set standard
	  values.

2009-03-21  Mike Krüger  <mkrueger@novell.com>
