@@ -1,5 +1,13 @@
 2009-03-22  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
+	  removed debug message.
+
+	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs: Worked on
+	  "surround with" indenting.
+
+2009-03-22  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: removed
 	  debug message.
 
